--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,8 @@
         {% endblock %}
     </head>
     <body>
+        {{ include('_header.html.twig') }}
         {% block body %}{% endblock %}
+        {{ include('_footer.html.twig') }}
     </body>
 </html>
