--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+<nav class="navbar navbar-expand-lg bg-primary mb-4">
     <div class="container">
         <div class="w-100 d-flex justify-content-between">
             <div>
                 <a class="navbar-brand d-flex" href="#">
-                    <h1 class="h4 m-0">Compare their votes</h1>
+                    <h1 class="h4 m-0">CompareTheirVotes</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
