Search form style + placeholder

--- a/templates/hp.html.twig
+++ b/templates/hp.html.twig
@@ -20,6 +20,7 @@
                 {{ form_row(form.mainMember, {'attr': {'data-select': ''}}) }}
                 {{ form_row(form.member, {'attr': {'data-select': ''}}) }}
                 {{ form_row(form.members) }}
+                {{ form_row(form.voteValue) }}
                 <button type="submit" class="btn btn-primary">{{ 'search'|trans }}</button>
                 {{ form_end(form) }}
             {% endif %}
