--- a/templates/hp.html.twig
+++ b/templates/hp.html.twig
@@ -34,7 +34,7 @@
                             <h4>{{ comparison.member.firstName }} {{ comparison.member.lastName }} <br> {{ comparison.memberCompared.firstName }} {{ comparison.memberCompared.lastName }}</h4>
                             {{ 'similar_vote_rate'|trans({'rate': comparison.data.rate.same|round(2), 'nb': comparison.data.total}) }}
                         </div>
-                        <div style="width: 400px;height: 400px" class="my-5 mx-auto" data-chart-type="doughnut" data-value="{{ comparison.data|chart_pie_this }}"></div>
+                        <div style="width: 400px;height: 400px" class="my-5 mx-auto" data-chart-type="doughnut" data-value="{{ comparison.data|chart_pie_this }}" data-title="{{ 'vote'|trans({'nb': comparison.data.total}) }}"></div>
                         <div class="accordion accordion-transparent mt-4" id="{{ key }}vote-detail-accordion">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -47,7 +47,11 @@
                                         <ul class="list-group list-group-flush">
                                             {% for memberVote in comparison.data.difference_detail %}
                                                 <li class="list-group-item p-0">
-                                                    <p class="mt-4">{{ memberVote.voteItem.vote.title }}</p>
+                                                    <p class="mt-4">
+                                                        <span>Title : {{ memberVote.voteItem.vote.title }}</span><br />
+                                                        <small class="text-muted">Reference : {{ memberVote.voteItem.vote.reference }}</small><br>
+                                                        <small class="text-muted">Description : {{ memberVote.voteItem.vote.description }}</small>
+                                                    </p>
                                                     <p class="d-flex justify-content-between">
                                                         <span>{{ comparison.member.firstName }} {{ comparison.member.lastName }}</span>
                                                         <span class="badge bg-primary">{{ translation.vote_value_translation(memberVote.mainMemberVoteValue) }}</span>
@@ -66,7 +70,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{{ key }}-same-vote-detail" aria-expanded="false" aria-controls="{{ key }}-vote-detail">
-                                        {{ 'list_difference_vote'|trans }}
+                                        {{ 'list_same_vote'|trans }}
                                     </button>
                                 </h2>
                                 <div id="{{ key }}-same-vote-detail" class="accordion-collapse collapse" data-bs-parent="#{{ key }}vote-detail-accordion">
@@ -74,7 +78,11 @@
                                         <ul class="list-group list-group-flush">
                                             {% for memberVote in comparison.data.same_detail %}
                                                 <li class="list-group-item p-0">
-                                                    <p class="my-4">{{ memberVote.voteItem.vote.title }}</p>
+                                                    <p class="my-4">
+                                                        <span>Title : {{ memberVote.voteItem.vote.title }}</span><br />
+                                                        <small class="text-muted">Reference : {{ memberVote.voteItem.vote.reference }}</small><br>
+                                                        <small class="text-muted">Description : {{ memberVote.voteItem.vote.description }}</small>
+                                                    </p>
                                                 </li>
                                             {% endfor %}
                                         </ul>
