--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,9 @@
         {% endblock %}
     </head>
     <body>
-        {{ include('_header.html.twig') }}
+        <header>
+            {{ include('_header.html.twig') }}
+        </header>
         <main>
             {% block body %}{% endblock %}
         </main>
