--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary mb-4">
+<nav class="navbar navbar-expand-lg mb-4">
     <div class="container">
         <div class="w-100 d-flex justify-content-between">
             <div>
@@ -11,9 +11,6 @@
             </div>
             <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Votes</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About & FAQ</a>
                     </li>
