Update header, add link on sitename

--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="w-100 d-flex justify-content-between">
             <div>
-                <a class="navbar-brand d-flex" href="#">
+                <a class="navbar-brand d-flex" href="{{ path('hp') }}">
                     <h1 class="h4 m-0">CompareTheirVotes</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
