--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -12,6 +12,9 @@
             <div class="collapse navbar-collapse flex-grow-0" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ path('groups') }}">Political Groups</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ path('faq') }}">About & FAQ</a>
                     </li>
                 </ul>
