--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -155,3 +155,118 @@ footer {
         background: #999;
     }
 }
+
+.grid-container {
+    min-width: 100%;
+    display: grid;
+    aspect-ratio: 1 / 1;
+    padding: 20px;
+    overflow: auto;
+
+    .member-detail {
+        font-size: 12px;
+        display: flex;
+        white-space: nowrap;
+        overflow: hidden;
+
+        &.rotate {
+            writing-mode: vertical-lr;
+            transform: rotate(-180deg);
+
+            .member-name {
+                margin-bottom: 10px;
+                margin-right: unset;
+            }
+        }
+    }
+
+    .member-name {
+        margin-right: 10px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .cell {
+        display: flex;
+        border-right: solid 2px #fff;
+        border-bottom: solid 2px #fff;
+        min-width: 30px;
+        min-height: 30px;
+        cursor: pointer;
+
+        &:hover {
+            min-width: 60px;
+            min-height: 60px;
+        }
+
+        &:not(.cell-identity) span {
+            display: none;
+        }
+
+        &:not(.cell-identity):hover span {
+            display: block;
+            margin: auto;
+        }
+    }
+
+    .rate-0 {
+
+    }
+    .rate-10 {
+        background: rgb(200, 150, 72);
+    }
+
+    .rate-20 {
+        background: rgb(221, 189, 123);
+    }
+
+    .rate-30 {
+        background: rgb(221, 189, 123);
+    }
+
+    .rate-40 {
+        background: rgb(238, 220, 175);
+    }
+
+    .rate-50 {
+        background: rgb(220, 238, 235);
+    }
+
+    .rate-60 {
+        background: rgb(127, 200, 190);
+    }
+
+    .rate-70 {
+        background: rgb(76, 166, 157);
+    }
+
+    .rate-80 {
+        background: rgb(57, 152, 143);
+    }
+
+    .rate-90 {
+        background: rgb(0, 64, 52);
+        span {
+            color: #fff
+        }
+    }
+
+    .rate-100 {
+        background: rgb(0, 64, 52);
+        span {
+            color: #fff
+        }
+    }
+
+    .no-vote {
+        background: #999;
+    }
+}
+
+
+.grid-container:after {
+    content: "";
+    display: block;
+    height: 50px;
+    width: 100%;
+}
